# Sistema_Boletines_EC

./: .env  .env.example  .gitignore  AI_GUIDELINES.MD  README.md  ROADMAP_SISTEMA_BOLETINES.md  SYSTEM_OVERVIEW.md  alembic.ini  config.py  main.py  pyproject.toml  requirements.txt
academic_tracking/: routes.py
academic_tracking/services/: data_loader_service.py  parsing_service.py  risk_service.py  status_service.py  tracking_service.py
academic_tracking/static/: academic_tracking.css
academic_tracking/static/academic_tracking/: dashboard.css  dashboard.js
academic_tracking/templates/: academic_tracking_dashboard.html  dashboard.css
alembic/: env.py
alembic/versions/: 152fa098b946_create_initial_auth_tables.py  3872363e457f_seed_initial_roles.py
app/: main.py
app/api/routes/: audit.py  auth.py  data_sources.py  students.py  ui.py
app/core/: settings.py
app/db/: __init__.py  database.py
app/models/: __init__.py  audit_log.py  base.py  institution.py  role.py  system_setting.py  user.py
app/schemas/: __init__.py  auth.py
app/security/: __init__.py  auth.py  auth_dependencies.py  auth_service.py  dependencies.py  jwt.py  password.py  permissions.py  roles.py
app/services/: audit_service.py  auth_service.py  bulletin_service.py  html_service.py  pdf_service.py  pdf_services.py  user_service.py
app/ui/: app.js  boletines.html  index.html  login.html  panel.html  styles.css
app/utils/: helpers.py
doc/: REPORTE_TECNICO_CONTINUIDAD.md
modulos/: ciclo1.py  ciclo2.py
plantillas/: academica.html  tecnica.html
scripts/: create_admin.py
(+18 files in other folders)
