[project]
name = "Sistema_Boletines_EC"
version = "0.1.0"
description = "Sistema modular para generación de boletines académicos"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "python-dotenv",
    "jinja2",
    "pydantic",
    "pydantic-settings",
    "httpx"
]

[dependency-groups]
dev = [
    "pytest",
    "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
